--- a/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/Equipo.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/Equipo.cshtml
@@ -12,7 +12,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.NombreCompleto, htmlAttributes: new { @class = "control-label" })
                     <input class="form-control text-box single-line"
-                           data-sn-autocomplete="@Url.Action("Autocomplete")"
+                           data-umdns-autocomplete-nombre="@Url.Action("AutocompleteNombreUMDNS")"
                            data-val="true"
                            data-val-maxlength="The field Nombre completo must be a string or array type with a maximum length of '255'."
                            data-val-maxlength-max="255" data-val-required="The Nombre completo field is required."
@@ -24,7 +24,16 @@
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.UMDNS, htmlAttributes: new { @class = "control-label" })
-                    @Html.EditorFor(model => model.UMDNS, new { htmlAttributes = new { @class = "form-control" } })
+                    <input class="form-control text-box single-line"
+                           data-umdns-autocomplete-codigo="@Url.Action("AutocompleteCodigoUMDNS")"
+                           data-val="true"
+                           data-val-maxlength="The field UMDNS must be a string or array type with a maximum length of '255'."
+                           data-val-maxlength-max="255" data-val-required="The UMDNS field is required."
+                           id="UMDNS"
+                           name="UMDNS" type="text" value="@Model.UMDNS">
+                    @*
+                    Html.EditorFor(model => model.UMDNS, new { htmlAttributes = new { @class = "form-control" } })
+                    *@
                     @Html.ValidationMessageFor(model => model.UMDNS, "", new { @class = "text-danger" })
                 </div>
                 <div class="form-group">
