--- a/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/InformacionHardware.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/InformacionHardware.cshtml
@@ -12,12 +12,12 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
-                            @Html.LabelFor(model => model.FabricanteId, "FabricanteId", htmlAttributes: new { @class = "control-label" })
+                            @Html.LabelFor(model => model.FabricanteId, "Fabricante", htmlAttributes: new { @class = "control-label" })
                             @Html.DropDownList("FabricanteId", null, "Seleccione", htmlAttributes: new { @class = "form-control ddl-fabricante" })
                             @Html.ValidationMessageFor(model => model.FabricanteId, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group">
-                            @Html.LabelFor(model => model.ModeloId, "ModeloId", htmlAttributes: new { @class = "control-label" })
+                            @Html.LabelFor(model => model.ModeloId, "Modelo", htmlAttributes: new { @class = "control-label" })
                             @Html.DropDownList("ModeloId", null, "Seleccione", htmlAttributes: new { @class = "form-control ddl-modelo" })
                             @Html.ValidationMessageFor(model => model.ModeloId, "", new { @class = "text-danger" })
                         </div>
@@ -25,7 +25,7 @@
 
                     <div class="col-md-6">
                         <div class="form-group">
-                            @Html.LabelFor(model => model.MarcaId, "MarcaId", htmlAttributes: new { @class = "control-label" })
+                            @Html.LabelFor(model => model.MarcaId, "Marca", htmlAttributes: new { @class = "control-label" })
                             @Html.DropDownList("MarcaId", null, "Seleccione", htmlAttributes: new { @class = "form-control ddl-marca" })
                             @Html.ValidationMessageFor(model => model.MarcaId, "", new { @class = "text-danger" })
                         </div>
