--- a/EquiposTecnicosSN.Web/Views/EquiposClimatizacion/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/EquiposClimatizacion/Index.cshtml
@@ -19,7 +19,9 @@
 
                 <div class="row">
                     <div class="col-lg-12">
-                        <table class="table table-hover table-responsive table-condensed table-striped">
+                        <table id="table-equipos-climatizacion" class="table table-hover table-responsive table-condensed table-striped">
+                            <thead>
+
                             <tr>
                                 <th>
                                     @Html.DisplayNameFor(model => model.Ubicacion)
@@ -35,6 +37,9 @@
                                 </th>
                                 <th></th>
                             </tr>
+                            </thead>
+                            <tbody>
+
 
                             @foreach (var item in Model)
                             {
@@ -59,6 +64,7 @@
                                     </td>
                                 </tr>
                             }
+                            </tbody>
 
                         </table>
                     </div>
