--- a/EquiposTecnicosSN.Web/Views/Shared/DisplayTemplates/Equipo.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/DisplayTemplates/Equipo.cshtml
@@ -22,7 +22,7 @@
                                 @Html.DisplayNameFor(model => model.Ubicacion)
                             </label>
                             <p class="form-control-static">
-                                @Html.DisplayFor(model => model.Ubicacion.NombreCompleto)
+                                @Html.DisplayFor(model => model.Ubicacion.Nombre)
                             </p>
                         </div>
 
